flux/apps/nutify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutify
  namespace: extra-tools
spec:
  selector:
    app: nutify
  type: ClusterIP
  ports:
    - name: nut
      port: 3493
      targetPort: 3493
      protocol: TCP
    - name: http
      port: 5050
      targetPort: 5050
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
